[project]
name = "jphackson2024-sit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "arugo11", email = "al23088@shibaura-it.ac.jp" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "bson>=0.5.10",
    "flask-pymongo>=2.3.0",
    "openai>=1.51.2",
    "ask>=0.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app/jphackson2024_sit"]
